Made small improvements to the application.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ffffff" />
+  <meta name="description"
+    content="Create and share your unique identity! Design and customize an animated logo that represents who you are.">
+  <meta name="keywords" content="Art, Identity, Logo, Design, Unique">
   <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
   <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
   <title>Identity</title>
